move to bootstrap and slidify

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,17 +1,40 @@
 ---
-title: Surprising Alpha | rCharts Analysis
-lead: Quick Bar Plots Using nvd3 and dimple
-framework: pure
+title: rCharts Peeks Under the Hood of ggvis
+subtitle: Get a Better Understanding of ggvis + vega
+framework: bootstrap
 mode     : selfcontained # {standalone, draft}
 highlighter: prettify
 hitheme: twitter-bootstrap
 assets:
   css:
-    - http://yui.yahooapis.com/pure/0.4.2/pure-min.css
-    - http://purecss.io/combo/1.11.2?/css/main-grid.css&/css/main.css&/css/home.css&/css/rainbow/baby-blue.css
+    - http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css
     - http://fonts.googleapis.com/css?family=Roboto:300,400
     - http://fonts.googleapis.com/css?family=Oxygen:300
----
+
+---    
+
+<style>
+body{
+  font-family: 'Oxygen', sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+h1,h2,h3,h4 {
+font-family: 'Raleway', sans-serif;
+}
+
+.container { width: 1000px; }
+
+h3 {
+background-color: #D4DAEC;
+  text-indent: 100px; 
+}
+
+h4 {
+text-indent: 100px;
+}
+</style>
 
 ```{r echo = F, warning=F, error=F, message=F}
 knitr::opts_chunk$set(
@@ -26,6 +49,23 @@ knitr::opts_chunk$set(
 )
 ```
 
+<div class="page-header">
+  <h1>{{ page.title }}</h1>
+  <h3>{{ page.subtitle }}</h3>
+</div>
+
+I have enjoyed watching the development of [`ggvis`](http://github.com/rstudio/ggvis).  A while back I wanted to understand the inner workings of `ggvis`, so I hacked together a combination of [Vega Live Editor](http://trifacta.github.io/vega/editor/), [`rCharts`](http://rcharts.io), and [Ramnath Vaidyanathan's Live `rCharts` editor](http://ramnathv.github.io/posts/making-rcharts-live-app/index.html) to play with the underlying `ggvis` spec.  Now that `ggvis` has reached a level of maturity for it to [reach CRAN](http://blog.rstudio.org/2014/06/23/introducing-ggvis/), I thought it might be helpful to share the interactive playground using Scatterplot Example 3 from the [`ggvis` cookbook](http://ggvis.rstudio.com/cookbook.html).
+
+You can run all of the examples in the playground from the [`ggvis` cookbook](http://ggvis.rstudio.com/cookbook.html) with this [code.R](https://github.com/timelyportfolio/rCharts_vega/blob/gh-pages/code.r).
+
+---
+<div class="col-md-12">
+  <iframe src = "vega_example.html" width = 100% height = 800px></iframe>
+<div>
+
+---
+### Load All of Our Packages
+
 ```{r "requires"}
 require(ggvis)
 require(dplyr)
@@ -36,6 +76,8 @@ require(rCharts)
 options( viewer=NULL )
 ```
 
+---
+### Build an rCharts Wrapper
 ```{r "rChartsWrapper"}
 rCharts_vega <- setRefClass(
   "rCharts_vega",
@@ -71,15 +113,29 @@ vPlot$setTemplate(
 )
 ```
 
-```{r "vega_example"}
+---
+### Scatterplots Example 3
+
+```{r "vega_example", echo = T, eval = F}
 # with examples from help/library/ggvis/doc/cookbook.html
-# Scatterplots Example 3
 
 vPlot$params$spec <- mtcars %>% 
   ggvis(~wt, ~mpg) %>%
   layer_points() %>%
   layer_smooths() %>%
   ggvis:::as.vega()
-vPlot$show("inline",cdn=F)
+vPlot
 ```
+
+```{r "vega_example_save", echo = F, eval = T}
+# save a local examplecopy
+
+vPlot$params$spec <- mtcars %>% 
+  ggvis(~wt, ~mpg) %>%
+  layer_points() %>%
+  layer_smooths() %>%
+  ggvis:::as.vega()
+vPlot$save("vega_example.html",cdn=T)
+```
+
 
