--- a/index.Rmd
+++ b/index.Rmd
@@ -36,6 +36,8 @@ text-indent: 100px;
 }
 </style>
 
+<a href="https://github.com/timelyportfolio/rCharts_vega"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+
 ```{r echo = F, warning=F, error=F, message=F}
 knitr::opts_chunk$set(
   warning=F,
